--- a/pages/cat.AI/prompt-wiz/index.html
+++ b/pages/cat.AI/prompt-wiz/index.html
@@ -123,7 +123,6 @@ const colorPalette = [
 ];
 function ensureCategory(key){
   if (categoryRegistry.has(key)) return categoryRegistry.get(key);
-  // assign next palette color not used, else generate HSL
   const used = new Set([...categoryRegistry.values()]);
   const next = colorPalette.find(c=>!used.has(c)) || hslFromString(key);
   categoryRegistry.set(key, next);
@@ -137,12 +136,12 @@ function cssVar(name){
   return getComputedStyle(document.documentElement).getPropertyValue(name).trim() || "#111111";
 }
 function rgba(c, a){
-  // accept hex or rgb/hsl; hex path: #rrggbb
   if(/^#([0-9a-f]{6})$/i.test(c)){
     const r=parseInt(c.slice(1,3),16), g=parseInt(c.slice(3,5),16), b=parseInt(c.slice(5,7),16);
     return `rgba(${r},${g},${b},${a})`;
   }
-  return c; // fallback (no alpha)
+  // if color is hsl/rgb already, just return without alpha (keeps it visible)
+  return c;
 }
 
 /* =========================
@@ -241,14 +240,14 @@ class PromptCard {
   /* ---------- Core Flow ---------- */
   runParse(){
     this.originalPrompt = (this.textarea.value||"").trim();
-    // Always re-render from current state
-    this.renderHighlight(this.originalPrompt, this.foundByCategory);
     this.renderSwapPanel();
+    // show preview version (remixed + preview tags)
+    this.renderPreview();
   }
 
+  // Compute remixed text + preview tag map, then render DOM
   renderPreview(){
     const remixed = this.applyReplacements(this.originalPrompt);
-    // preview highlights show originals + replacements
     const previewCat = new Map();
     for (const [cat,set] of this.foundByCategory.entries()){
       previewCat.set(cat, new Set(set));
@@ -256,7 +255,28 @@ class PromptCard {
     for (const [term, repl] of this.replacements.entries()){
       for (const set of previewCat.values()){ if (set.has(term)) set.add(repl); }
     }
-    this.renderHighlight(remixed, previewCat);
+    this.renderDOM(remixed, previewCat);
+  }
+
+  // (Optional) raw rendering; currently unused
+  renderRaw(){
+    this.renderDOM(this.originalPrompt, this.foundByCategory);
+  }
+
+  // Single DOM renderer (NO calls back into renderPreview/renderRaw)
+  renderDOM(text, foundMap){
+    // clear selection on each render
+    this.selectedWordIdxs.clear();
+    this.anchorWordIdx = null;
+
+    const segments = this.buildHighlightSpans(text, foundMap);
+    this.highlightView.innerHTML = "";
+
+    const { fragment, words } = this.tokenizeSegmentsToWords(segments);
+    this.highlightView.appendChild(fragment);
+
+    this.wordElems = words;
+    this.updateWordSelectionClasses();
   }
 
   applyReplacements(text){
@@ -280,30 +300,11 @@ class PromptCard {
         return repl;
       });
     }
-    placeholders.forEach(({token,lock})=>{ out=out.replaceAll(token,lock); });
+    placeholders.forEach(({token,lock})=>{ out=out.replace(new RegExp(token,"g"),lock); });
     return out;
   }
 
-  /* ---------- Rendering ---------- */
-  renderHighlight(text, foundMap){
-    // clear selection on each render
-    this.selectedWordIdxs.clear();
-    this.anchorWordIdx = null;
-
-    const segments = this.buildHighlightSpans(text, foundMap);
-    this.highlightView.innerHTML = "";
-
-    const { fragment, words } = this.tokenizeSegmentsToWords(segments);
-    this.highlightView.appendChild(fragment);
-
-    this.wordElems = words;
-    this.updateWordSelectionClasses();
-
-    // After base render, render preview state (replacements) into same view
-    // (we keep single live view). If you prefer raw view, comment next line.
-    this.renderPreview();
-  }
-
+  /* ---------- Rendering Helpers ---------- */
   buildHighlightSpans(text, foundMap){
     const matches=[];
     for (const [cat,set] of foundMap.entries()){
@@ -566,8 +567,8 @@ class PromptCard {
     this.foundByCategory.set(key, set);
     if (!this.replacements.has(phrase)) this.replacements.set(phrase, phrase);
     if (lockIt) this.lockedSections.add(phrase);
-    this.renderPreview();
     this.renderSwapPanel();
+    this.renderPreview();
   }
 
   removeTagBubble(){
@@ -641,8 +642,8 @@ class PromptCard {
       this.lockedSections.delete(term);
     }
 
-    this.renderPreview();
     this.renderSwapPanel();
+    this.renderPreview();
   }
 
   /* ---------- Edit / Copy / Export / Remove ---------- */
@@ -659,7 +660,6 @@ class PromptCard {
   copyPrompt(){
     const content = this.highlightView.textContent || "";
     navigator.clipboard.writeText(content);
-    // brief visual feedback
     this.btnCopy.style.opacity = "0.85";
     setTimeout(()=>{ this.btnCopy.style.opacity = "1"; }, 250);
   }
@@ -712,7 +712,6 @@ function debounce(fn,ms=250){ let t; return (...args)=>{ clearTimeout(t); t=setT
    ========================= */
 const list = document.getElementById("promptList");
 document.getElementById("addPrompt").addEventListener("click", ()=>{
-  // Create a new empty card; the card starts in edit mode so you can paste your prompt
   new PromptCard(list, "");
 });
   </script>
