--- a/pages/cat.AI/prompt-wiz/index.html
+++ b/pages/cat.AI/prompt-wiz/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Prompt Engineer – Color-coded Mad Libs</title>
+  <title>Sublime Prompt – Color-coded Mad Libs</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=Noto+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
@@ -36,6 +36,7 @@ button:hover { box-shadow: 0 6px 16px rgba(0,0,0,0.08); }
 .card-head { display: flex; justify-content: space-between; align-items: center; padding: 4px 4px 2px; }
 .card-actions { display: flex; gap: 8px; align-items: center; }
 .card-title { font-size: 22px; cursor: text; }
+.card-title .edit-icon { margin-left: 8px; font-size: 14px; color: var(--muted); }
 
 .copy-rail { grid-column: 2 / 3; grid-row: 1 / 4; display: flex; }
 .copy-btn {
@@ -63,10 +64,21 @@ textarea.prompt-input { width: 100%; padding: 12px; border: 1px solid var(--bord
 
 /* Swap panel */
 .swap-panel { display: block; } /* full-width stack, not grid */
-.swap-card { border: 1px solid var(--border); border-radius: 12px; padding: 10px; background: #fff; }
-.swap-card h3 { display: flex; align-items: center; gap: 8px; margin: 0 0 8px; font-size: 13px; }
-.swap-card .dot { width: 10px; height: 10px; border-radius: 999px; }
-.swap-item { grid-template-columns: 1fr auto; }
+/* align category labels to input left edge via grid columns */
+.swap-card { display: grid; grid-template-columns: auto 1fr; column-gap: 8px; }
+/* place the label (with dot) spanning both columns but using internal grid */
+.swap-card h3 { 
+  grid-column: 1 / -1; 
+  display: grid; 
+  grid-template-columns: auto 1fr; 
+  column-gap: 8px; 
+  align-items: center; 
+  margin: 0 0 8px 0;
+}
+/* dot next to category label */
+.swap-card h3 .dot { width: 10px; height: 10px; border-radius: 999px; }
+.swap-item { display: grid; grid-template-columns: auto 1fr; column-gap: 8px; margin-bottom: 5px; }
+.swap-item .right { display: contents; } /* let X be col 1 and textarea be col 2 */
 .swap-item textarea {
   width: 100%; min-height: 36px; resize: none; overflow: hidden; padding: 8px; border: 1px solid var(--border); border-radius: 8px; font: inherit;
 }
@@ -86,13 +98,34 @@ textarea.prompt-input { width: 100%; padding: 12px; border: 1px solid var(--bord
 .tag-chip .dot { width: 10px; height: 10px; border-radius: 999px; }
 
 .site-footer { padding: 16px 20px 40px; color: var(--muted); text-align: center; border-top: 1px solid var(--border); }
+.intro { max-width: 1100px; margin: 10px auto 0; padding: 16px 20px 4px; color: var(--c-lighting); }
+.intro h2 { margin: 0 0 8px; font-size: 22px; font-weight: 700; }
+.intro p { margin: 0 0 8px; color: var(--fg); }
+.intro ul { margin: 6px 0 0 18px; line-height: 1.6; }
+/* Controls */
+.card-actions .copy-cta { background:#111; color:#fff; border-color:#111; }
+/* Swap panel item layout */
+.swap-item .right { display:flex; align-items:flex-start; gap:8px; }
+.swap-item .x { font-size: 10px; padding: 2px 6px; border-radius: 6px; }
   </style>
 </head>
 <body>
   <header class="site-header">
-    <h1>Prompt Engineer</h1>
+    <h1>Sublime Prompt</h1>
     <p class="tagline">Color-coded Mad Libs for image prompt crafting</p>
   </header>
+
+  <section class="intro">
+    <h2>Design, tag, and remix prompts with precision</h2>
+    <p>Welcome to Sublime Prompt. Paste a prompt, then interact directly with the text to tag phrases, lock parts you want to keep, and live-edit swap values—all with clean, readable styling.</p>
+    <ul>
+      <li>Click a word, or click and drag to select multiple words. Shift-click extends a range; Ctrl/⌘-click toggles words.</li>
+      <li>Tag the selection via the category chips or create a Custom tag. Reassigning a tag removes the previous one.</li>
+      <li>Locked selections become italic at 50% opacity and are immune to swaps. Use "Lock selection" in the bubble.</li>
+      <li>Edit tag values below; fields nearly fill the width and auto-resize for long text. Remove tags with the small ✕ on the left.</li>
+      <li>Click the black "Copy Prompt" button anytime to copy your current, remixed prompt.</li>
+    </ul>
+  </section>
 
   <main class="layout">
     <section class="controls">
@@ -103,7 +136,6 @@ textarea.prompt-input { width: 100%; padding: 12px; border: 1px solid var(--bord
   </main>
 
   <footer class="site-footer">
-    <p>Tip: Click/drag to select words. Shift = range, Ctrl/⌘ = toggle. Tag via chips or create a custom category. "Lock selection" makes the phrase italic + 50% opacity and immune to swaps.</p>
   </footer>
 
   <script type="module">
@@ -143,6 +175,8 @@ function rgba(c, a){
     const r=parseInt(c.slice(1,3),16), g=parseInt(c.slice(3,5),16), b=parseInt(c.slice(5,7),16);
     return `rgba(${r},${g},${b},${a})`;
   }
+  // Support CSS hsl() by appending alpha using modern syntax "hsl(... / a)"
+  if (/^hsl\(/i.test(c.trim())) return c.trim().replace(/\)$/, ` / ${a})`);
   return c;
 }
 function setCategoryColor(key, color){ categoryRegistry.set(key, color); }
@@ -182,6 +216,8 @@ class PromptCard {
     title.textContent = "Interactive Highlight (Manual)";
     title.contentEditable = "true";
     title.addEventListener("click", ()=>title.focus());
+    title.addEventListener("input", ()=>{ this.titleUserEdited = true; });
+    const pencil = document.createElement("span"); pencil.className="edit-icon"; pencil.textContent="✎"; title.appendChild(pencil);
     const actions = document.createElement("div");
     actions.className = "card-actions";
 
@@ -194,7 +230,7 @@ class PromptCard {
     this.btnExport.textContent = "Export JSON";
 
     this.btnCopy = document.createElement("button");
-    this.btnCopy.className = "discreet";
+    this.btnCopy.className = "discreet copy-cta";
     this.btnCopy.textContent = "Copy Prompt";
     this.btnCopy.title = "Copy current prompt";
 
@@ -202,7 +238,7 @@ class PromptCard {
     this.btnRemove.className = "discreet";
     this.btnRemove.textContent = "✕";
 
-    actions.append(this.btnEdit, this.btnCopy, this.btnExport, this.btnRemove);
+    actions.append(this.btnEdit, this.btnExport, this.btnRemove, this.btnCopy);
     head.append(title, actions);
 
     // Body (grid: main + copy rail)
@@ -246,6 +282,7 @@ class PromptCard {
     this.anchorWordIdx = null;
     this.dragState = { active:false, start:null, additive:false, base:new Set() };
     this.selectionDirty=false;
+    this.titleUserEdited = false;
 
     // Bubble
     this.activeBubbleEl = null;
@@ -255,6 +292,10 @@ class PromptCard {
     // Wire up events
     this.textarea.addEventListener("input", debounce(()=>{
       this.runParse();
+      if (!this.titleUserEdited) {
+        const t = (this.textarea.value||"").trim().split(/\s+/).slice(0,4).join(" ");
+        if (t) this.root.querySelector(".card-title").firstChild.nodeValue = t;
+      }
       if (this.isEditing && (this.textarea.value||"").trim().length) {
         this.isEditing = false; this.updateEditUI();
       }
@@ -428,8 +469,8 @@ class PromptCard {
         h.dataset.category = node.dataset.category || "";
         if (!h.classList.contains("locked") && h.dataset.category) {
           const c = ensureCategory(h.dataset.category);
-          h.style.background = rgba(c, 0.08);
-          h.style.boxShadow = `inset 0 -2px 0 0 ${c}`;
+          h.style.background = rgba(c, 0.06);
+          h.style.boxShadow = `inset 0 -3px 0 0 ${c}`;
         }
         processInto(h, node.textContent);
         frag.appendChild(h);
@@ -730,7 +771,7 @@ class PromptCard {
         btnX.className="x"; btnX.textContent="✕";
         btnX.title = "Remove this tag (keep the word)";
         btnX.addEventListener("click", ()=>{ this.untag(catKey, term); });
-        right.append(ta, btnX);
+        right.append(btnX, ta);
         wrap.appendChild(right);
         card.appendChild(wrap);
       }
