--- a/pages/cat.Imagery/Disposable-Camera-Filter/index.html
+++ b/pages/cat.Imagery/Disposable-Camera-Filter/index.html
@@ -79,6 +79,16 @@
         <div class="row"><label>Trail Angle (°)</label><input type="range" id="motionAngle" min="0" max="180" step="1" value="0"><span class="val" data-for="motionAngle">0</span></div>
       </section>
 
+      <!-- NEW: Handheld Camera section -->
+      <section>
+        <h3>Handheld Camera</h3>
+        <div class="row"><label>Intensity</label><input type="range" id="shakeHandheld" min="0" max="1" step="0.01" value="0.3"><span class="val" data-for="shakeHandheld">0.30</span></div>
+        <div class="row"><label>Frequency (Hz)</label><input type="range" id="shakeFreq" min="0.1" max="5" step="0.1" value="2"><span class="val" data-for="shakeFreq">2.0</span></div>
+        <div class="row"><label>X Amp (px)</label><input type="range" id="shakeAmpX" min="0" max="50" step="1" value="8"><span class="val" data-for="shakeAmpX">8</span></div>
+        <div class="row"><label>Y Amp (px)</label><input type="range" id="shakeAmpY" min="0" max="50" step="1" value="6"><span class="val" data-for="shakeAmpY">6</span></div>
+        <div class="row"><label>Rotation (°)</label><input type="range" id="shakeRot" min="0" max="2" step="0.1" value="0.4"><span class="val" data-for="shakeRot">0.4</span></div>
+      </section>
+
       <section>
         <h3>Film Grain</h3>
         <div class="row"><label>ASA</label><input type="range" id="grainASA" min="50" max="3200" step="50" value="800"><span class="val" data-for="grainASA">800</span></div>
